Fixing send button spacing

--- a/responsive_styles.css
+++ b/responsive_styles.css
@@ -199,8 +199,12 @@ a:active {
   background-color: rgba(32,32,32,0.9);
 }
 
+.buttoncontainer{
+ padding-top: 16px;
+}
+
 .sendpadding{
-	padding-left: 12px;	
+ padding-left: 12px;	
 }
 
 /* small screens */
@@ -307,7 +311,7 @@ a:active {
 		  position: relative;
 		  padding-left: 5.6vw;
 		  padding-right: 5.6vw;
-		  padding-bottom: 5.6vw;
+		  padding-bottom: 1vw;
 		  width: inherit;
 		  
 		}
@@ -331,8 +335,6 @@ a:active {
 		  box-sizing:border-box;
 		}
 
-		
-
 		.formmessageinputstyle{
 		  background-color: rgba(32,32,32,0.9);
 		  border: 0;
@@ -347,9 +349,7 @@ a:active {
 		  color: white;
 		  box-sizing:border-box;
 		}
-
-		
-
+	
 		.sendbutton{
 		  background-color: rgba(48,48,48,0.9);
 		  border: 0;
@@ -364,6 +364,10 @@ a:active {
 		  text-align: left;
 		  border-top: 1px solid rgba(64,64,64,0.9);
 		  box-sizing: border-box;
+		}
+		
+		.buttoncontainer{
+		 padding-top: 16px;
 		}
 		
 		.sendpadding{
